src/test/error/access5.lns
class Super {
    fn __init() {
    }
}
class Sub extend Super { // error
}

class Super2 {
    pro fn __init() {
    }
}
class Sub2 extend Super2 {
}


let aSuper = new Super(); // error
let aSuper2 = new Super2(); // error


class Test {
}

pub let val:Map<Test,int> = {}; // error
pub let val2:Test = new Test(); // error

pub class Test2 {
   pub let val:Test; // error
   pri let val:Test; 
   pri let val:Test {pub}; // error
   pub let val2:Map<Test,int>; // error
   pub let val3:Map<int,Test>; // error
   pub let val4:Map<int,Map<Test,int>>; // error
}
